mobile overflow fix

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -746,7 +746,7 @@ input[name=panel]:checked + .collapsible {
 }
 
 .card-personal-data {
-  min-width: 377px;
+  min-width: 300px;
 }
 .card-personal-data p {
   text-align: left;
