--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -507,7 +507,7 @@ input[name='panel'] {
   min-width: 100px;
 }
 .card-personal-data {
-  min-width: 377px;
+  min-width: 300px;
   p { //reset p properties
     text-align: left;
     margin-top: 0;
